<resources>
    <string name="app_name">LAHacks</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_event_profile">Event Profile</string>
    <string name="button_personal_profile">Personal Profile</string>
    <string name="button_map_view">Map View</string>
    <string name="button_event_list">Event List</string>
    <string name="button_screen">Button Screen</string>
    <string name="button_loginPage">Login Page</string>
    <string name="item1">Item</string>
    <string name="title_activity_maps">Map</string>
    <string name="profile_background">profile background</string>
    <string name="profile_picture">profile picture</string>
    <string name="name">name</string>
    <string name="profileEvents">Events</string>
    <string name="profileFriends">Friends</string>
    <string name="map">Map</string>
    <string name="profile">Profile</string>
    <string name="calendar">Calendar</string>
    <string name="list">List</string>
    <string name="numevents">numEvents</string>
    <string name="numfriends">numFriends</string>
    <string name="name_of_event">name of event</string>
    <string name="eventname">eventName</string>
    <string name="eventdescription">eventDescription</string>
    <string name="event_image">event image</string>
    <string name="event_date">event date</string>
    <string name="eventdate">eventDate</string>
    <string name="title_activity_event_list">EventList</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Featured</string>
    <string name="tab_text_2">Suggested</string>
    <string name="tab_text_3">Saved Events</string>
    <string name="textView_tab1">Your Suggested Events are: </string>
    <string name="textView_tab2">Your Featured Events are: </string>
    <string name="textView_tab3">Your Saved Events are: </string>
    <string name="comment_title">comments....</string>
    <string name="title_activity_login">Sign in</string>
    <string name="tab1_textView">Suggested Events:</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_event_page">event_page</string>
    <string name="title_activity_campus_event">CampusEvent</string>
</resources>
