<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".EventList">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="113dp"
            android:foregroundGravity="bottom" />
    </RelativeLayout>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_scrollFlags="scroll|enterAlways"
            app:title="@string/app_name">

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_1" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_2" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_3" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

    </android.support.v4.view.ViewPager>

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimaryDark">

        <ImageButton
            android:id="@+id/mapImageButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_map_white_24dp"
            android:onClick="toMapView"/>

        <ImageButton
            android:id="@+id/listImageButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_list_white_24dp"
            android:onClick="toEventProfile"/>

        <ImageButton
            android:id="@+id/profileImageButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_face_white_24dp"
            android:onClick="toPersonalProfile"/>

    </TableRow>
</android.support.design.widget.CoordinatorLayout>